# wiki-diff-notify

./: .gitignore  Pipfile  README.md  main.py  pyproject.toml  sample.ini  wiki_diff_notify.py
libs/: __init__.py  channel.py  notifier.py  repository.py
wiki_diff_notify/: __init__.py  __main__.py  channel.py  notifier.py
