[tool.poetry]
name = "wiki-diff-notify"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.6"
gitpython = "^3.1.1"
slackclient = "^2.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
flake8-import-order = "^0.18.1"
mypy = "^0.770"
yapf = "^0.29.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
